# bazel-remote

./: BUILD.bazel  WORKSPACE  main.go
cache/: BUILD.bazel  cache.go  disk.go  disk_test.go
cache/proxy/: BUILD.bazel  gcsproxy.go  httpproxy.go  httpproxy_test.go
config/: BUILD.bazel  config.go
examples/: config.yml
server/: BUILD.bazel  http.go  http_test.go
